# python-practice-workspace

./: .gitignore  blog.db  integrated_report.json  memo.md  price_history.csv  requirements.txt  weather_report.json
src/config_management/: README.md
src/config_management/basic_examples/: 01_os_environ.py  02_dotenv_usage.py  04_pydantic_settings.py
src/docker_basics/: LEARNING_GUIDE.md  README.md  RUN_vs_CMD_guide.md  docker_compose_guide.md  run_examples.ps1  run_examples.sh
src/phase1_basics/: README.md  exceptions.py  magic_methods.py  oop_classes.py  variable_type_hints.py
src/phase2_data/: README.md
src/phase3_orm/: README.md  __init__.py  blog.db  database.py  models.py  orm_comparison.md
src/phase4_web/: README.md
src/phase4_web_frameworks/: README.md
src/phase6_project/: README.md  design_patterns_guide.md
src/phase6_project/deployment/heroku_deploy/todo_api/: Procfile  README.md  pyproject.toml  requirements.txt
src/phase6_project/deployment/heroku_deploy/todo_api/app/: alembic.ini  database.py  main.py
src/phase6_project/deployment/heroku_deploy/todo_api/app/alembic/: env.py
src/phase6_project/deployment/heroku_deploy/todo_api/app/core/: config.py  dependencies.py  security.py
src/phase6_project/deployment/heroku_deploy/todo_api/app/crud/: task.py  user.py
src/phase6_project/deployment/heroku_deploy/todo_api/app/models/: __init__.py  task.py  user.py
src/phase6_project/deployment/heroku_deploy/todo_api/app/routers/: auth.py  tasks.py
src/phase6_project/deployment/heroku_deploy/todo_api/app/schemas/: task.py  user.py
(+143 files in other folders)
