[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-api"
version = "0.1.0"
description = "A FastAPI Todo API with authentication"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio", 
    "httpx",
    "black",
    "flake8",
    "isort",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
